2010-12-30  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* library/zipvfs.tcl: Applied patch 3005441 to fix issue with UTF-8
	detection for filename encoding.  Applied patch 3132957 to enable
	streaming of large files.

2010-12-29  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* generic/vfs.c: include sys/stat.h so build under MinGW64 will succeed.
	See bug #3107382.
	* library/zipvfs.tcl: Fixed issues with clock handling, dealing with 
	trying to [open] a directory, reading a zip file that has been appended
	to another file.  See bugs 3103687, 3107380

2010-05-16  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* library/vfslib.tcl: Changed memchan condition from Tcl version 8.6 or
	greater to presence of chan command (since chan now in later 8.5 builds)

2010-02-01  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* Makefile.in (PKG_TCL_SOURCES): Added 'template/tclIndex' to the list 
	of installed files. Required for vfs's based on template vfs to load.

2010-01-30  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* templatevfs.tcl: workaround for bug in how virtual volumes
	are mounted. Version bumped to 1.5.4.  See:
http://sf.net/tracker/?func=detail&aid=2886914&group_id=10894&atid=110894

2009-10-20  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* tclIndex: Corrected version number.
	* pkgIndex.tcl.in: Edited to replace function of deleted 
	pkgIndex.tcl in template subdir.

2009-10-15  Steve Huntley  <stephen.huntley@alum.mit.edu>

	vfs::template package update ver. 1.5.3:

	* templatevfs.tcl: Incorporated AK's fix below.
	* collatevfs.tcl: ensured binary file contents got written
	correctly, and ensured that not only file contents but 
	also file attributes were updated to all write targets.

2009-07-06  Andreas Kupries  <andreask@activestate.com>

	* library/template/templatevfs.tcl (memchan): Fix result for
	* pkgIndex.tcl: unix. The bug was reported on the wiki. The fix
	  there was wrong, did improper handling of the $args argument.